# pathplanning

./: CoordinationTranslate.m  FP_02(fake_terrain).plan  FT01.plan  FT01_original.plan  FT03.plan  FT03_original.plan  GPS2HIGHTC.m  GPS2HIGHTC.prj  GPS2HIGHTC_mex.mexa64  HIGHT2SLOPE.m  HIGHT2SLOPE.m~  HIGHT2SLOPE.prj  HIGHT2SLOPE_mex.mexa64  altitude.plan  calculate_distance.m  calculate_distance.prj  calculate_distance2.m  calculate_distance2.prj  calculate_distance2_mex.mexa64  cc.plan  cc2.plan  cc3.plan  circle2.plan  circle3.plan  common_circle.plan  compare_original.plan  compare_original_01.plan  compare_original_50.plan  compare_wp_01.plan  compare_wp_50.plan  evaluate_minBoundingBox.m  ff.plan  fff.plan  function_verticalwaypoint.m  function_verticalwaypoint.m~  function_verticalwaypoint.prj  function_verticalwaypoint_mex.mexa64  horizontalUncertainty.m  increase_waypoint.m  increase_waypoint.prj  (+22 more)
exam/For all/: CMakeLists.txt  GPS2HIGHTC.h  GPS2HIGHTC_terminate.cpp  GPS2HIGHTC_terminate.h  calculate_distance2_emxAPI.cpp  calculate_distance2_emxutil.cpp  calculate_distance2_types.h  codeInfo.mat  exampleforall.cpp  increase_waypoint2.cpp  increase_waypoint2.h  increase_waypoint2_initialize.h  increase_waypoint2_terminate.cpp  rtGetInf.cpp  rt_nonfinite.h  rtw_proj.tmw  slope_judgement_emxutil.cpp  slope_judgement_initialize.h  slope_judgement_terminate.cpp  slope_judgement_types.h  waypoint_generator.cpp  waypoint_generator.h
exam/GPS2HIGHTC/: CMakeLists.txt  GPS2HIGHTC.cpp  GPS2HIGHTC_initialize.cpp  a.out  codeInfo.mat  example3.cpp  rtGetNaN.cpp  rtGetNaN.h
function_verticalwaypoint/: CMakeLists.txt  HIGHT2SLOPE.cpp  floor.cpp  function_verticalwaypoint.h  function_verticalwaypoint_emxAPI.cpp  function_verticalwaypoint_emxAPI.h  function_verticalwaypoint_initialize.h  function_verticalwaypoint_rtw.mk  function_verticalwaypoint_terminate.cpp  gcGuiReport.mat  generate.cpp  increase_waypoint.cpp  nullAssignment.h  opencv_test.cpp  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtw_proj.tmw  sign.h  sqrt.cpp
function_verticalwaypoint/html/: GPS2HIGHTC93_watch.html  HIGHT2SLOPE110_mcode.html  HIGHT2SLOPE110_watch.html  HIGHT2SLOPE112_watch.html  HIGHT2SLOPE94_mcode.html  calculate_distance70_mcode.html  floor_cpp.html  floor_h.html  function_verticalwaypoint1_watch.html  function_verticalwaypoint_buildlog2.html  function_verticalwaypoint_cpp.html  function_verticalwaypoint_emxAPI_cpp.html  (+14 more)
(+649 files in other folders)
